--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,18 +19,32 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_KEY }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+        
 
-      - name: rsync deployments
-        uses: burnett01/rsync-deployments@5.2.1
-        with:
-          switches: -avzr --delete
-          path: .
-          remote_path: /var/tf2server/hh2
-          remote_host: us.potato.tf
-          remote_user: pterodactyl
-          remote_key: ${{ secrets.DEPLOY_KEY }}
+      #- name: rsync deployments
+      #  uses: burnett01/rsync-deployments@5.2.1
+      #  with:
+      #    switches: -avzr --delete
+      #    path: .
+      #    remote_path: /var/tf2server/tf/hh2
+      #    remote_host: us.potato.tf
+      #    remote_user: pterodactyl
+      #    remote_key: ${{ secrets.DEPLOY_KEY }}
+      
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          ssh-add - <<< "${SSH_PRIVATE_KEY}"
+          for i in  "22 pterodactyl@us.potato.tf:/" "22 pterodactyl@sgp.potato.tf:/" "22 pterodactyl@eu.potato.tf:/" "22 pterodactyl@eu2.potato.tf:/"; do a=( $i );
+          {
+          rsync -a -e "ssh -p ${a[0]} -o StrictHostKeyChecking=no " --delete --update --exclude=".*" --exclude="*.bz2" --exclude="tf_mvm_missioncycle.res" --exclude="mapcycle.txt" . ${a[1]}var/tf2server/tf/hh2/
+          } &
+          done
+          wait
