--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         env:
             SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run: |
-          for i in  "22 pterodactyl@us.potato.tf:/" "3438 pterodactyl@us.potato.tf:/" "8246 pterodactyl@us.potato.tf:/" "22 pterodactyl@sgp.potato.tf:/" "22 pterodactyl@194.233.86.73" "22 pterodactyl@eu.potato.tf:/" "22 pterodactyl@eu2.potato.tf:/"; do a=( $i );
+          for i in  "22 pterodactyl@us.potato.tf:/" "3438 pterodactyl@us.potato.tf:/" "8246 pterodactyl@us.potato.tf:/" "22 pterodactyl@sgp.potato.tf:/" "22 pterodactyl@194.233.86.73:/" "22 pterodactyl@eu.potato.tf:/" "22 pterodactyl@eu2.potato.tf:/"; do a=( $i );
           {
           rsync -a -e "ssh -p ${a[0]} -o StrictHostKeyChecking=no" --delete --update --exclude=".*" --exclude="*.bz2" --exclude="tf_mvm_missioncycle.res" --exclude="mapcycle.txt" . ${a[1]}var/tf2server/tf/hh2/
           } &
