--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,13 +32,17 @@ jobs:
             ssh-agent -a $SSH_AUTH_SOCK > /dev/null
             ssh-add - <<< "${{ secrets.DEPLOY_KEY }}"
         
-      - name: Run a multi-line script
+      - name: Create bz2 archives
+        run: |
+          find . -type f -not \( -name "*.pop" -or -name "*.nav" -or -name "*.res" -or -name "*.bz2" -or -name "*.lua" \) \( ! -regex '.*/\..*' \) -exec bzip2 -f -k {} +
+
+      - name: Sync with game servers
         env:
             SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         run: |
           for i in  "22 pterodactyl@us.potato.tf:/" "3438 pterodactyl@us.potato.tf:/" "8246 pterodactyl@us.potato.tf:/" "22 pterodactyl@sgp.potato.tf:/" "22 pterodactyl@sgp2.potato.tf:/" "22 pterodactyl@eu.potato.tf:/" "22 pterodactyl@eu2.potato.tf:/"; do a=( $i );
           {
-          rsync -a -e "ssh -p ${a[0]} -o StrictHostKeyChecking=no" --delete --update --exclude=".*" --exclude="*.bz2" --exclude="tf_mvm_missioncycle.res" --exclude="mapcycle.txt" . ${a[1]}var/tf2server/tf/hh2/
+          rsync -a -e "ssh -p ${a[0]} -o StrictHostKeyChecking=no" --delete --update --exclude=".*" --exclude="tf_mvm_missioncycle.res" --exclude="mapcycle.txt" . ${a[1]}var/tf2server/tf/hh2/
           } &
           done
           wait
