--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Upload to R2
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --acl public-read --exclude '.git/*' --follow-symlinks --delete
+          args: --exclude '.git/*' --follow-symlinks --delete
         env:
           AWS_S3_BUCKET: fastdl-hh2
           AWS_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
