--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
           for i in  "22 pterodactyl@us.potato.tf" "3438 pterodactyl@us.potato.tf" "8246 pterodactyl@us.potato.tf" "22 pterodactyl@usw.potato.tf" "22 pterodactyl@sgp.potato.tf" "22 pterodactyl@sgp2.potato.tf" "22 pterodactyl@eu.potato.tf" "22 pterodactyl@eu2.potato.tf" "22 pterodactyl@eu9.potato.tf" "22 pterodactyl@aus.potato.tf" "22 pterodactyl@br.potato.tf"; do a=( $i );
           {
           rsync -a -e "ssh -p ${a[0]} -o StrictHostKeyChecking=no" --delete --update --exclude=".*" --exclude="tf_mvm_missioncycle.res" --exclude="mapcycle.txt" . ${a[1]}:/var/tf2server/tf/hh2/
+          ssh -p ${a[0]} ${a[1]} mkdir -p /var/www/html/gameassets
           ssh -p ${a[0]} ${a[1]} ln -s /var/tf2server/tf/hh2 /var/www/html/gameassets/hh2
           } &
           done
